fixed all px and comment -- warning

--- a/food.html
+++ b/food.html
@@ -14,20 +14,24 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
-      <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>Recipes | Lets Go Vegan</title>
-     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="assets/images/favicon.png"
+    />
   </head>
   <body>
-    <!--------------------------- Header Section including logo and Navigation -->
+    <!-- Header Section including logo and Navigation -->
     <header class="container-fluid">
       <nav class="navbar navbar-expand-sm navbar-light">
         <a class="navbar-brand mr-auto" href="index.html"
           ><img
             src="assets/images/vegan-logo.png"
             alt="vegan logo"
-            height="75px"
-            width="75px"
+            height="75"
+            width="75"
         /></a>
         <button
           class="navbar-toggler btn btn-secondary"
@@ -61,7 +65,7 @@
         </div>
       </nav>
       <div class="container-fluid">
-        <!--Only show on mobile-->
+        <!-- Only show on mobile-->
         <div class="row">
           <div class="col-12">
             <a class="nav-head d-sm-none" href="whyvegan.html"
@@ -71,99 +75,155 @@
         </div>
       </div>
     </header>
-    <!--------------------------- Main section - middle of page -->
-     <section class="container-fluid">
-     <!-- Row contains 2 recipes on larger screen -->
-     <div class="row recipe-row"> 
-            <div class="col-lg-6"><!-- Mango Chia Pudding -->
-                <div class="row"> 
-                    <div class="col-md-4">
-                        <img class="food-pic" src="assets/images/chia-pudding-unsplash.jpg" alt="Mango Chia Pudding" />
-                    </div>
-                    <div class="col-md-8 align-self-center">
-                        <a href="assets/recipes/mango-chia-pudding.pdf" target="_blank"><h2>Mango Chia Pudding</h2></a>    
-                        <div class="food-text">
-                            <p>Simple to make and perfect to take to work</p>
-                        </div>
-                    </div>
-                </div>
+    <!-- Main section - middle of page -->
+    <section class="container-fluid">
+      <!-- Row contains 2 recipes on larger screen -->
+      <div class="row recipe-row">
+        <div class="col-lg-6">
+          <!-- Mango Chia Pudding -->
+          <div class="row">
+            <div class="col-md-4">
+              <img
+                class="food-pic"
+                src="assets/images/chia-pudding-unsplash.jpg"
+                alt="Mango Chia Pudding"
+              />
             </div>
-            <div class="col-lg-6"><!-- Pancakes -->
-                <div class="row"> 
-                    <div class="col-md-4">
-                        <img class="food-pic" src="assets/images/pancakes-pexels.jpg" alt="Pancakes" />
-                    </div>
-                    <div class="col-md-8  align-self-center">
-                        <a href="assets/recipes/pancakes.pdf" target="_blank"><h2>Pancakes</h2></a>    
-                        <div class="food-text">
-                            <p>For that luxury feeling that <em>no way is this vegan!!!!</em></p>
-                        </div>
-                    </div>
-                </div>
+            <div class="col-md-8 align-self-center">
+              <a href="assets/recipes/mango-chia-pudding.pdf" target="_blank"
+                ><h2>Mango Chia Pudding</h2></a
+              >
+              <div class="food-text">
+                <p>Simple to make and perfect to take to work</p>
+              </div>
             </div>
+          </div>
         </div>
-<!-- Row contains 2 recipes on larger screen -->
-     <div class="row recipe-row"> 
-            <div class="col-lg-6"><!-- Egg Salad Sandwich -->
-                <div class="row"> 
-                    <div class="col-md-4">
-                        <img class="food-pic" src="assets/images/vegan-egg-internet.jpg" alt="Egg Salad Sandwich" />
-                    </div>
-                    <div class="col-md-8 align-self-center">
-                        <a href="assets/recipes/egg-salad-sandwich.pdf" target="_blank"><h2>Egg Salad Sandwich</h2></a>    
-                        <div class="food-text">
-                            <p>No need to miss your favourite lunch time sandwich</p>
-                        </div>
-                    </div>
-                </div>
+        <div class="col-lg-6">
+          <!-- Pancakes -->
+          <div class="row">
+            <div class="col-md-4">
+              <img
+                class="food-pic"
+                src="assets/images/pancakes-pexels.jpg"
+                alt="Pancakes"
+              />
             </div>
-            <div class="col-lg-6"><!-- Sun-dried Tomato Pesto Hummus -->
-                <div class="row"> 
-                    <div class="col-md-4">
-                        <img class="food-pic" src="assets/images/sundried-tomato-pesto-internet.jpg" alt="Sun-dried Tomato Pesto Hummus" />
-                    </div>
-                    <div class="col-md-8  align-self-center">
-                        <a href="assets/recipes/sun-dried-tomato-pesto.pdf" target="_blank"><h2>Sun-dried Tomato Pesto Hummus</h2></a>    
-                        <div class="food-text">
-                            <p>This pesto hummus can be served on a sandwich over pasta or with a beautuful salad</p>
-                        </div>
-                    </div>
-                </div>
+            <div class="col-md-8 align-self-center">
+              <a href="assets/recipes/pancakes.pdf" target="_blank"
+                ><h2>Pancakes</h2></a
+              >
+              <div class="food-text">
+                <p>
+                  For that luxury feeling that <em>no way is this vegan!!!!</em>
+                </p>
+              </div>
             </div>
+          </div>
         </div>
-        <!-- Row contains 2 recipes on larger screen -->
-     <div class="row recipe-row"> 
-            <div class="col-lg-6"><!-- Roasted Aubergine & Chickpea Curry -->
-                <div class="row"> 
-                    <div class="col-md-4">
-                        <img class="food-pic" src="assets/images/aubergine-chickpea-internet.jpg" alt="Roasted Aubergine & Chickpea Curry" />
-                    </div>
-                    <div class="col-md-8 align-self-center">
-                        <a href="assets/recipes/aubergine-chickpea-curry.pdf" target="_blank"><h2>Roasted Aubergine & Chickpea Curry</h2></a>    
-                        <div class="food-text">
-                            <p>Roasted Aubergine has the most wonderful flavour, this curry is well worth the effort</p>
-                        </div>
-                    </div>
-                </div>
+      </div>
+      <!-- Row contains 2 recipes on larger screen -->
+      <div class="row recipe-row">
+        <div class="col-lg-6">
+          <!-- Egg Salad Sandwich -->
+          <div class="row">
+            <div class="col-md-4">
+              <img
+                class="food-pic"
+                src="assets/images/vegan-egg-internet.jpg"
+                alt="Egg Salad Sandwich"
+              />
             </div>
-            <div class="col-lg-6"><!-- Tso Tofu -->
-                <div class="row"> 
-                    <div class="col-md-4">
-                        <img class="food-pic" src="assets/images/tso-tofu-internet.jpg" alt="Tso Tofu" />
-                    </div>
-                    <div class="col-md-8  align-self-center">
-                        <a href="assets/recipes/tso-tofu.pdf" target="_blank"><h2>Tso Tofu</h2></a>    
-                        <div class="food-text">
-                            <p>Tofu never tasted so good, serve with rice for an amazing evening meal</p>
-                        </div>
-                    </div>
-                </div>
+            <div class="col-md-8 align-self-center">
+              <a href="assets/recipes/egg-salad-sandwich.pdf" target="_blank"
+                ><h2>Egg Salad Sandwich</h2></a
+              >
+              <div class="food-text">
+                <p>No need to miss your favourite lunch time sandwich</p>
+              </div>
             </div>
+          </div>
         </div>
+        <div class="col-lg-6">
+          <!-- Sun-dried Tomato Pesto Hummus -->
+          <div class="row">
+            <div class="col-md-4">
+              <img
+                class="food-pic"
+                src="assets/images/sundried-tomato-pesto-internet.jpg"
+                alt="Sun-dried Tomato Pesto Hummus"
+              />
+            </div>
+            <div class="col-md-8 align-self-center">
+              <a
+                href="assets/recipes/sun-dried-tomato-pesto.pdf"
+                target="_blank"
+                ><h2>Sun-dried Tomato Pesto Hummus</h2></a
+              >
+              <div class="food-text">
+                <p>
+                  This pesto hummus can be served on a sandwich over pasta or
+                  with a beautuful salad
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Row contains 2 recipes on larger screen -->
+      <div class="row recipe-row">
+        <div class="col-lg-6">
+          <!-- Roasted Aubergine & Chickpea Curry -->
+          <div class="row">
+            <div class="col-md-4">
+              <img
+                class="food-pic"
+                src="assets/images/aubergine-chickpea-internet.jpg"
+                alt="Roasted Aubergine & Chickpea Curry"
+              />
+            </div>
+            <div class="col-md-8 align-self-center">
+              <a
+                href="assets/recipes/aubergine-chickpea-curry.pdf"
+                target="_blank"
+                ><h2>Roasted Aubergine & Chickpea Curry</h2></a
+              >
+              <div class="food-text">
+                <p>
+                  Roasted Aubergine has the most wonderful flavour, this curry
+                  is well worth the effort
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <!-- Tso Tofu -->
+          <div class="row">
+            <div class="col-md-4">
+              <img
+                class="food-pic"
+                src="assets/images/tso-tofu-internet.jpg"
+                alt="Tso Tofu"
+              />
+            </div>
+            <div class="col-md-8 align-self-center">
+              <a href="assets/recipes/tso-tofu.pdf" target="_blank"
+                ><h2>Tso Tofu</h2></a
+              >
+              <div class="food-text">
+                <p>
+                  Tofu never tasted so good, serve with rice for an amazing
+                  evening meal
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
-    
-<!--------------------------- Footer Section -->
+    <!-- Footer Section -->
     <footer class="container-fluid">
       <div class="row footer-row">
         <div class="col-sm-1 d-none d-sm-block social-links">
@@ -176,7 +236,9 @@
         <div class="col-sm-3">
           <ul class="list-inline social-links">
             <li class="list-inline-item">
-              <a href="https://m.youtube.com/playlist?list=PL3D58119F10C2B9A2" target="_blank"
+              <a
+                href="https://m.youtube.com/playlist?list=PL3D58119F10C2B9A2"
+                target="_blank"
                 ><i class="fa fa-youtube" aria-hidden="true"></i>
                 <span class="sr-only">YouTube</span></a
               >
@@ -198,8 +260,11 @@
       </div>
     </footer>
 
-<!--------------------------- Required for Bootstrap JS & keep all scripts together -->
-    <script src="https://kit.fontawesome.com/15a3b949c3.js" crossorigin="anonymous"></script>
+    <!-- Required for Bootstrap JS & keep all scripts together -->
+    <script
+      src="https://kit.fontawesome.com/15a3b949c3.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
