--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     />
   </head>
   <body>
-    <!------------------------ Header Section including logo and Navigation -->
+    <!-- Header Section including logo and Navigation -->
     <header class="container-fluid">
       <nav class="navbar navbar-expand-sm navbar-light">
         <a class="navbar-brand mr-auto" href="index.html">
@@ -76,7 +76,7 @@
         </div>
       </div>
     </header>
-    <!--------------------------- Main section - middle of page -->
+    <!-- Main section - middle of page -->
     <section class="container-fluid">
       <div class="d-flex justify-content-center">
         <div class="mr-5 d-none d-sm-block together-block">
@@ -121,7 +121,7 @@
       </div>
     </section>
 
-    <!--------------------------- Footer Section -->
+    <!-- Footer Section -->
     <footer class="container-fluid">
       <div class="row footer-row">
         <div class="col-sm-1 d-none d-sm-block social-links">
@@ -158,7 +158,7 @@
       </div>
     </footer>
 
-    <!--------------------------- Required for Bootstrap JS & keep all scripts together -->
+    <!-- Required for Bootstrap JS & keep all scripts together -->
     <script
       src="https://kit.fontawesome.com/15a3b949c3.js"
       crossorigin="anonymous"
