--- a/whyvegan.html
+++ b/whyvegan.html
@@ -23,7 +23,7 @@
     />
   </head>
   <body>
-    <!--------------------------- Header Section including logo and Navigation -->
+    <!-- Header Section including logo and Navigation -->
     <header class="container-fluid">
       <nav class="navbar navbar-expand-sm navbar-light">
         <a class="navbar-brand mr-auto" href="index.html">
@@ -66,7 +66,7 @@
         </div>
       </nav>
     </header>
-    <!--------------------------- Main section - middle of page -->
+    <!-- Main section - middle of page -->
     <section class="container-fluid">
       <div class="row no-gutters">
         <div class="col-12"><h1 id="why-h1">So why Go Vegan?</h1></div>
@@ -487,7 +487,7 @@
         </div>
       </div>
     </section>
-    <!--------------------------- Footer Section -->
+    <!-- Footer Section -->
     <footer class="container-fluid">
       <div class="row footer-row">
         <div class="col-sm-1 d-none d-sm-block social-links">
@@ -524,7 +524,7 @@
       </div>
     </footer>
 
-    <!--------------------------- Required for Bootstrap JS & keep all scripts together -->
+    <!-- Required for Bootstrap JS & keep all scripts together -->
     <script
       src="https://kit.fontawesome.com/15a3b949c3.js"
       crossorigin="anonymous"
