--- a/challenge.html
+++ b/challenge.html
@@ -16,18 +16,22 @@
     />
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Challege | Lets Go Vegan</title>
-     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="assets/images/favicon.png"
+    />
   </head>
   <body>
-<!--------------------------- Header Section including logo and Navigation -->
+    <!-- Header Section including logo and Navigation -->
     <header class="container-fluid">
       <nav class="navbar navbar-expand-sm navbar-light">
         <a class="navbar-brand mr-auto" href="index.html"
           ><img
             src="assets/images/vegan-logo.png"
             alt="vegan logo"
-            height="75px"
-            width="75px"
+            height="75"
+            width="75"
         /></a>
         <button
           class="navbar-toggler btn btn-secondary"
@@ -71,56 +75,91 @@
         </div>
       </div>
     </header>
-<!--------------------------- Main section - middle of page -->
+    <!-- Main section - middle of page -->
     <section class="container-fluid" id="frog-outer">
-        <div id="frog-pic">
-            <div class="row">
-                <div class="col-12 col-lg-6 ml-lg-auto">
-                    <form class="signup-form">
-                        <h2>Challenge Sign-Up</h2>
-                        <!-- Label wrap for better spacing -->
-                        <label for="fname">
-                            <input class="text-input" type="text" placeholder="First Name" name="first_name" required>
-                        </label>
-                        <br/>
-                        <label for="lname">
-                            <input class="text-input" type="text" placeholder="Last Name" name="last_name" required>
-                        </label>
-                        <br/>
-                        <label for="email">
-                            <input class="text-input" type="email" placeholder="Email Address" name="email_address" required>
-                        </label>
-                        <br/>
-                        <label for="cemail"> 
-                            <input class="text-input" type="email" placeholder="Confirm Email Address" name="cemail_address" required>
-                        </label>
-                        <br/>
-                        <label class="comm-option" for="date">Challenge Start Date</label>
-                        <br/>
-                        <input class="text-input support-option" type="date" name="start_date" required>
-                        <br/>
-                        <!-- Drop Down Selection for form --> 
-                        <label class="comm-option" for="daily">How Often Can we Contact You</label>
-                        <br/>
-                        <select class="text-input support-option" name="comlist" form="signup-form">
-                            <option value="daily">Daily Email Support</option>
-                            <option value="weekly">Weekly Email Support</option>
-                            <option value="none">No Support Required</option>
-                        </select>
-                        <br/>
-                        <br/>
-                        <input class="join-button" type="submit" value="Lets Begin">
-                    </form>
-                </div>
-            </div>
+      <div id="frog-pic">
+        <div class="row">
+          <div class="col-12 col-lg-6 ml-lg-auto">
+            <form class="signup-form">
+              <h2>Challenge Sign-Up</h2>
+              <!-- Label wrap for better spacing -->
+              <label for="fname">
+                <input
+                  class="text-input"
+                  type="text"
+                  placeholder="First Name"
+                  name="first_name"
+                  required
+                />
+              </label>
+              <br />
+              <label for="lname">
+                <input
+                  class="text-input"
+                  type="text"
+                  placeholder="Last Name"
+                  name="last_name"
+                  required
+                />
+              </label>
+              <br />
+              <label for="email">
+                <input
+                  class="text-input"
+                  type="email"
+                  placeholder="Email Address"
+                  name="email_address"
+                  required
+                />
+              </label>
+              <br />
+              <label for="cemail">
+                <input
+                  class="text-input"
+                  type="email"
+                  placeholder="Confirm Email Address"
+                  name="cemail_address"
+                  required
+                />
+              </label>
+              <br />
+              <label class="comm-option" for="date">Challenge Start Date</label>
+              <br />
+              <input
+                class="text-input support-option"
+                type="date"
+                name="start_date"
+                required
+              />
+              <br />
+              <!-- Drop Down Selection for form -->
+              <label class="comm-option" for="daily"
+                >How Often Can we Contact You</label
+              >
+              <br />
+              <select
+                class="text-input support-option"
+                name="comlist"
+                form="signup-form"
+              >
+                <option value="daily">Daily Email Support</option>
+                <option value="weekly">Weekly Email Support</option>
+                <option value="none">No Support Required</option>
+              </select>
+              <br />
+              <br />
+              <input class="join-button" type="submit" value="Lets Begin" />
+            </form>
+          </div>
         </div>
-   </section> 
-  
-<!--------------------------- Footer Section -->
+      </div>
+    </section>
+
+    <!-- Footer Section -->
     <footer class="container-fluid">
       <div class="row footer-row">
         <div class="col-sm-1 d-none d-sm-block social-links">
-          <a href="challenge.html" 
+          <a href="challenge.html"
             ><i class="fa fa-envelope-open-text" aria-hidden="true"></i>
             <span class="sr-only">Contact</span></a
           >
@@ -129,7 +168,9 @@
         <div class="col-sm-3">
           <ul class="list-inline social-links">
             <li class="list-inline-item">
-              <a href="https://m.youtube.com/playlist?list=PL3D58119F10C2B9A2" target="_blank"
+              <a
+                href="https://m.youtube.com/playlist?list=PL3D58119F10C2B9A2"
+                target="_blank"
                 ><i class="fa fa-youtube" aria-hidden="true"></i>
                 <span class="sr-only">YouTube</span></a
               >
@@ -150,9 +191,12 @@
         </div>
       </div>
     </footer>
-  
-<!--------------------------- Required for Bootstrap JS & keep all scripts together -->
-    <script src="https://kit.fontawesome.com/15a3b949c3.js" crossorigin="anonymous"></script>
+
+    <!-- Required for Bootstrap JS & keep all scripts together -->
+    <script
+      src="https://kit.fontawesome.com/15a3b949c3.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
