--- a/challenge.html
+++ b/challenge.html
@@ -86,6 +86,7 @@
               <label for="fname">
                 <input
                   class="text-input"
+                  id="fname"
                   type="text"
                   placeholder="First Name"
                   name="first_name"
@@ -96,6 +97,7 @@
               <label for="lname">
                 <input
                   class="text-input"
+                  id="lname"
                   type="text"
                   placeholder="Last Name"
                   name="last_name"
@@ -106,6 +108,7 @@
               <label for="email">
                 <input
                   class="text-input"
+                  id="email"
                   type="email"
                   placeholder="Email Address"
                   name="email_address"
@@ -116,6 +119,7 @@
               <label for="cemail">
                 <input
                   class="text-input"
+                  id="cemail"
                   type="email"
                   placeholder="Confirm Email Address"
                   name="cemail_address"
@@ -123,29 +127,33 @@
                 />
               </label>
               <br />
-              <label class="comm-option" for="date">Challenge Start Date</label>
-              <br />
-              <input
-                class="text-input support-option"
-                type="date"
-                name="start_date"
-                required
-              />
+              <label class="comm-option" for="date"
+                >Challenge Start Date
+                <br />
+                <input
+                  class="text-input support-option"
+                  id="date"
+                  type="date"
+                  name="start_date"
+                  required
+                />
+              </label>
               <br />
               <!-- Drop Down Selection for form -->
               <label class="comm-option" for="daily"
-                >How Often Can we Contact You</label
-              >
-              <br />
-              <select
-                class="text-input support-option"
-                name="comlist"
-                form="signup-form"
-              >
-                <option value="daily">Daily Email Support</option>
-                <option value="weekly">Weekly Email Support</option>
-                <option value="none">No Support Required</option>
-              </select>
+                >How Often Can we Contact You
+                <br />
+
+                <select
+                  class="text-input support-option"
+                  id="daily"
+                  form="signup-form"
+                >
+                  <option value="daily">Daily Email Support</option>
+                  <option value="weekly">Weekly Email Support</option>
+                  <option value="none">No Support Required</option>
+                </select>
+              </label>
               <br />
               <br />
               <input class="join-button" type="submit" value="Lets Begin" />
