--- a/whyvegan.html
+++ b/whyvegan.html
@@ -69,7 +69,7 @@
     <!-- Main section - middle of page -->
     <section class="container-fluid">
       <div class="row no-gutters">
-        <div class="col-12"><h1 id="why-h1">So why Go Vegan?</h1></div>
+        <div class="col-12"><h1 id="why-h1">So Why Go Vegan?</h1></div>
       </div>
       <div class="row no-gutters">
         <div class="col-xl-4">
