--- a/whyvegan.html
+++ b/whyvegan.html
@@ -79,10 +79,10 @@
             <div class="py-2"><h3>For the Animals</h3></div>
             <div class="py-2 why-text">
               <p>
-                Let me ask you a simple question, why do we eat a pig but love a
+                Let me ask you a simple question: why do we eat a pig but love a
                 dog?
                 <br />
-                What makes a horse a pet yet a sheep is a commodity?
+                What makes a horse a pet yet sheep are a commodity?
               </p>
               <hr />
               <!-- Add a button to collapse the text for x-large only-->
@@ -106,14 +106,14 @@
                   protect their young and feel loss when their babies are taken
                   away from them. We will spend all our money on making our pets
                   comfortable and we are outraged when anyone hurts a pet, yet
-                  research has shown that a pig is more intelligent than a dog
+                  research has shown that a pig is more intelligent than a dog,
                   and a cow will call for her baby and search for days, when
                   it's taken away from her.
                   <br />
                   <br />
                   The animal industry, through advertising, makes us think that
                   the animals are happy, but many live a short and miserable
-                  life, they are bred to be too big, to lay more eggs, to
+                  life. They are bred to be too big, to lay more eggs, to
                   produce more milk, all of this is detrimental to the animals
                   health.
                   <br />
@@ -151,14 +151,14 @@
                 protect their young and feel loss when their babies are taken
                 away from them. We will spend all our money on making our pets
                 comfortable and we are outraged when anyone hurts a pet, yet
-                research has shown that a pig is more intelligent than a dog and
+                research has shown that a pig is more intelligent than a dog, and
                 a cow will call for her baby and search for days, when it's
                 taken away from her.
                 <br />
                 <br />
                 The animal industry, through advertising, makes us think that
-                the animals are happy, but many live a short and miserable life,
-                they are bred to be too big, to lay more eggs, to produce more
+                the animals are happy, but many live a short and miserable life.
+                They are bred to be too big, to lay more eggs, to produce more
                 milk, all of this is detrimental to the animals health.
                 <br />
                 <br />
@@ -290,7 +290,7 @@
             <div class="py-2 why-text">
               <p>
                 Did you know that meat is classed by the world health
-                organisation(WHO) as a carcinogenic? Yet plants have been shown
+                organisation (WHO) as a carcinogenic? Yet plants have been shown
                 to have many healing properties.
               </p>
               <hr />
@@ -312,7 +312,7 @@
                 <div class="card card-body">
                   <p>
                     Processed meat is currently classed as a class 1
-                    carcinogenic alongside cigarettes and asbestos. Class 1
+                    carcinogenic, alongside cigarettes and asbestos. Class 1
                     means there is strong evidence it causes cancer, red meats
                     are a class 2A, which means they are probable to cause
                     cancer.
@@ -322,42 +322,40 @@
                     know that the latest studies show that milk can actually
                     pull calcium from your bones?
                     <br />
-                    You can get your calcium from plants
+                    You can get your calcium from plants:
                   </p>
                   <ul>
                     <li>
-                      green, leafy vegetables – such as broccoli, cabbage and
+                      Green, leafy vegetables – such as broccoli, cabbage and
                       okra, but not spinach
                     </li>
-                    <li>fortified unsweetened soya, rice and oat drinks</li>
-                    <li>calcium-set tofu</li>
-                    <li>sesame seeds and tahini</li>
-                    <li>pulses</li>
+                    <li>Fortified unsweetened soya, rice and oat drinks</li>
+                    <li>Calcium-set tofu</li>
+                    <li>Sesame seeds and tahini</li>
+                    <li>Pulses</li>
                     <li>
-                      brown and white bread (in the UK, calcium is added to
+                      Brown and white bread (in the UK, calcium is added to
                       white and brown flour by law)
                     </li>
                     <li>
-                      dried fruit, such as raisins, prunes, figs and dried
+                      Dried fruit, such as raisins, prunes, figs and dried
                       apricots
                     </li>
                   </ul>
                   <p>
                     And for omega 3 we can leave the fish to swim in our oceans
-                    and eat any of the following
+                    and eat any of the following:
                   </p>
                   <ul>
                     <li>
-                      Chia Seeds. Chia seeds are known for their many health
-                      benefits, bringing a hefty dose of fiber and protein with
-                      each serving
+                      Chia seeds
                     </li>
-                    <li>Brussels Sprouts</li>
-                    <li>Algal Oil</li>
-                    <li>Hemp Seed</li>
+                    <li>Brussels sprouts</li>
+                    <li>Algal oil</li>
+                    <li>Hemp seed</li>
                     <li>Walnuts</li>
                     <li>Flaxseeds</li>
-                    <li>Perilla Oil</li>
+                    <li>Perilla oil</li>
                   </ul>
                   <p>
                     Studies are showing that following a healthy plant based
@@ -383,8 +381,8 @@
                       rel="noopener"
                       ><span class="sr-only">Dr Neal Barnard</span>Dr Neal
                       Barnard</a
-                    >
-                    , they are a wealth of information from where you can get
+                    >, 
+                    they are a wealth of information from where you can get
                     all your nutrients from to the latest research on how a
                     plant based diet can improve your health
                     <br />
@@ -399,7 +397,7 @@
               <!-- text not collapsed for all except x-large only-->
               <div class="d-xl-none">
                 <p>
-                  Processed meat is currently classed as a class 1 carcinogenic
+                  Processed meat is currently classed as a class 1 carcinogenic,
                   alongside cigarettes and asbestos. Class 1 means there is
                   strong evidence it causes cancer, red meats are a class 2A,
                   which means they are probable to cause cancer.
@@ -409,42 +407,40 @@
                   that the latest studies show that milk can actually pull
                   calcium from your bones?
                   <br />
-                  You can get your calcium from plants
+                  You can get your calcium from plants:
                 </p>
                 <ul>
                   <li>
-                    green, leafy vegetables – such as broccoli, cabbage and
+                    Green, leafy vegetables – such as broccoli, cabbage and
                     okra, but not spinach
                   </li>
-                  <li>fortified unsweetened soya, rice and oat drinks</li>
-                  <li>calcium-set tofu</li>
-                  <li>sesame seeds and tahini</li>
-                  <li>pulses</li>
+                  <li>Fortified unsweetened soya, rice and oat drinks</li>
+                  <li>Calcium-set tofu</li>
+                  <li>Sesame seeds and tahini</li>
+                  <li>Pulses</li>
                   <li>
-                    brown and white bread (in the UK, calcium is added to white
+                    Brown and white bread (in the UK, calcium is added to white
                     and brown flour by law)
                   </li>
                   <li>
-                    dried fruit, such as raisins, prunes, figs and dried
+                    Dried fruit, such as raisins, prunes, figs and dried
                     apricots
                   </li>
                 </ul>
                 <p>
                   And for omega 3 we can leave the fish to swim in our oceans
-                  and eat any of the following
+                  and eat any of the following:
                 </p>
                 <ul>
                   <li>
-                    Chia Seeds. Chia seeds are known for their many health
-                    benefits, bringing a hefty dose of fiber and protein with
-                    each serving
+                    Chia seeds
                   </li>
-                  <li>Brussels Sprouts</li>
-                  <li>Algal Oil</li>
-                  <li>Hemp Seed</li>
+                  <li>Brussels sprouts</li>
+                  <li>Algal oil</li>
+                  <li>Hemp seed</li>
                   <li>Walnuts</li>
                   <li>Flaxseeds</li>
-                  <li>Perilla Oil</li>
+                  <li>Perilla oil</li>
                 </ul>
                 <p>
                   Studies are showing that following a healthy plant based
