grammer on recipe page and added padding 0 to form

--- a/food.html
+++ b/food.html
@@ -162,8 +162,8 @@
               >
               <div class="food-text">
                 <p>
-                  This pesto hummus can be served on a sandwich over pasta or
-                  with a beautuful salad
+                  This pesto hummus can be served on a sandwich, over pasta or
+                  with a beautiful salad
                 </p>
               </div>
             </div>
