add class why-initial and make a minimum height so buttons stay same level when responsive

--- a/whyvegan.html
+++ b/whyvegan.html
@@ -78,7 +78,7 @@
             <div class="why-pictures" id="fox-pic"></div>
             <div class="py-2"><h3>For the Animals</h3></div>
             <div class="py-2 why-text">
-              <p>
+              <p class="why-initial" >
                 Let me ask you a simple question: why do we eat a pig but love a
                 dog?
                 <br />
@@ -194,7 +194,7 @@
             <div class="why-pictures" id="nature-pic"></div>
             <div class="py-2"><h3>For the Planet</h3></div>
             <div class="py-2 why-text">
-              <p>
+              <p class="why-initial">
                 We are slowly killing our planet, from global warming to
                 polluting our oceans.
                 <br />
@@ -288,7 +288,7 @@
             <div class="why-pictures" id="rainbow-pic"></div>
             <div class="py-2"><h3>For your Health</h3></div>
             <div class="py-2 why-text">
-              <p>
+              <p class="why-initial">
                 Did you know that meat is classed by the world health
                 organisation (WHO) as a carcinogenic? Yet plants have been shown
                 to have many healing properties.
