--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <a href="whyvegan.html">Lets Go Vegan Together</a>
           </h2>
         </div>
-        <div class="ml-sm-5 mr-sm-5" id="pig-pic">
+        <div id="pig-pic">
           <a href="whyvegan.html"> </a>
         </div>
       </div>
