fix input date not showing on mobiles

--- a/challenge.html
+++ b/challenge.html
@@ -130,13 +130,14 @@
               <label class="comm-option" for="date"
                 >Challenge Start Date
                 <br />
-                <input
+                <input placeholder="dd/mm/yyyy" class="text-input support-option" type="text" name="start_date" onfocus="(this.type='date')" required />
+                              <!-- <input
                   class="text-input support-option"
                   id="date"
                   type="date"
                   name="start_date"
                   required
-                />
+                /> -->
               </label>
               <br />
               <!-- Drop Down Selection for form -->
