amed links to renamed why-vegan page

--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
       <div class="d-flex justify-content-center">
         <div class="mr-5 d-none d-sm-block together-block">
           <h2 id="together">
-            <a href="whyvegan.html">Lets Go Vegan Together</a>
+            <a href="why-vegan.html">Lets Go Vegan Together</a>
           </h2>
         </div>
         <div id="pig-pic">
-          <a href="whyvegan.html"> </a>
+          <a href="why-vegan.html"> </a>
         </div>
       </div>
       <!-- set text and button below the picture-->
