missed 1 why-vegan reference

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <a class="nav-link" href="index.html">Home </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="whyvegan.html">Why </a>
+              <a class="nav-link" href="why-vegan.html">Why </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="food.html">Recipes </a>
