make recipe only on xl and fixed curry picture

--- a/food.html
+++ b/food.html
@@ -79,7 +79,7 @@
     <section class="container-fluid">
       <!-- Row contains 2 recipes on larger screen -->
       <div class="row recipe-row">
-        <div class="col-lg-6">
+        <div class="col-xl-6">
           <!-- Mango Chia Pudding -->
           <div class="row">
             <div class="col-md-4">
@@ -99,7 +99,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-xl-6">
           <!-- Pancakes -->
           <div class="row">
             <div class="col-md-4">
@@ -124,7 +124,7 @@
       </div>
       <!-- Row contains 2 recipes on larger screen -->
       <div class="row recipe-row">
-        <div class="col-lg-6">
+        <div class="col-xl-6">
           <!-- Egg Salad Sandwich -->
           <div class="row">
             <div class="col-md-4">
@@ -144,7 +144,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-xl-6">
           <!-- Sun-dried Tomato Pesto Hummus -->
           <div class="row">
             <div class="col-md-4">
@@ -172,7 +172,7 @@
       </div>
       <!-- Row contains 2 recipes on larger screen -->
       <div class="row recipe-row">
-        <div class="col-lg-6">
+        <div class="col-xl-6">
           <!-- Roasted Aubergine & Chickpea Curry -->
           <div class="row">
             <div class="col-md-4">
@@ -197,7 +197,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-xl-6">
           <!-- Tso Tofu -->
           <div class="row">
             <div class="col-md-4">
