amended code to improve for footer

--- a/challenge.html
+++ b/challenge.html
@@ -130,8 +130,15 @@
               <label class="comm-option" for="date"
                 >Challenge Start Date
                 <br />
-                <input placeholder="dd/mm/yyyy" class="text-input support-option" type="text" name="start_date" onfocus="(this.type='date')" required />
-                              <!-- <input
+                <input
+                  placeholder="dd/mm/yyyy"
+                  class="text-input support-option"
+                  type="text"
+                  name="start_date"
+                  onfocus="(this.type='date')"
+                  required
+                />
+                <!-- <input
                   class="text-input support-option"
                   id="date"
                   type="date"
@@ -167,14 +174,16 @@
     <!-- Footer Section -->
     <footer class="container-fluid">
       <div class="row footer-row">
-        <div class="col-sm-1 d-none d-sm-block social-links">
+        <div
+          class="col-sm-1 col-md-6 d-none d-sm-block social-links d-md-flex justify-content-start"
+        >
           <a href="challenge.html"
             ><i class="fa fa-envelope-open-text" aria-hidden="true"></i>
-            <span class="sr-only">Contact</span></a
+            <span class="sr-only">Challange</span></a
           >
         </div>
-        <div class="col-sm-8"></div>
-        <div class="col-sm-3">
+
+        <div class="col-sm-3 col-md-6 d-md-flex justify-content-end">
           <ul class="list-inline social-links">
             <li class="list-inline-item">
               <a
