--- a/why-vegan.html
+++ b/why-vegan.html
@@ -78,7 +78,7 @@
             <div class="why-pictures" id="fox-pic"></div>
             <div class="py-2"><h3>For the Animals</h3></div>
             <div class="py-2 why-text">
-              <p class="why-initial" >
+              <p class="why-initial">
                 Let me ask you a simple question: why do we eat a pig but love a
                 dog?
                 <br />
@@ -151,8 +151,8 @@
                 protect their young and feel loss when their babies are taken
                 away from them. We will spend all our money on making our pets
                 comfortable and we are outraged when anyone hurts a pet, yet
-                research has shown that a pig is more intelligent than a dog, and
-                a cow will call for her baby and search for days, when it's
+                research has shown that a pig is more intelligent than a dog,
+                and a cow will call for her baby and search for days, when it's
                 taken away from her.
                 <br />
                 <br />
@@ -381,8 +381,7 @@
                       rel="noopener"
                       ><span class="sr-only">Dr Neal Barnard</span>Dr Neal
                       Barnard</a
-                    >, 
-                    they are a wealth of information from where you can get
+                    >, they are a wealth of information from where you can get
                     all your nutrients from to the latest research on how a
                     plant based diet can improve your health
                     <br />
@@ -486,14 +485,16 @@
     <!-- Footer Section -->
     <footer class="container-fluid">
       <div class="row footer-row">
-        <div class="col-sm-1 d-none d-sm-block social-links">
+        <div
+          class="col-sm-1 col-md-6 d-none d-sm-block social-links d-md-flex justify-content-start"
+        >
           <a href="challenge.html"
             ><i class="fa fa-envelope-open-text" aria-hidden="true"></i>
-            <span class="sr-only">Contact</span></a
+            <span class="sr-only">Challange</span></a
           >
         </div>
-        <div class="col-sm-8"></div>
-        <div class="col-sm-3">
+
+        <div class="col-sm-3 col-md-6 d-md-flex justify-content-end">
           <ul class="list-inline social-links">
             <li class="list-inline-item">
               <a
