--- a/food.html
+++ b/food.html
@@ -81,8 +81,8 @@
       <div class="row recipe-row">
         <div class="col-xl-6">
           <!-- Mango Chia Pudding -->
-          <div class="row">
-            <div class="col-md-4">
+          <div class="row recipe-card">
+            <div class="col-md-4 ">
               <img
                 class="food-pic"
                 src="assets/images/chia-pudding-unsplash.jpg"
@@ -101,7 +101,7 @@
         </div>
         <div class="col-xl-6">
           <!-- Pancakes -->
-          <div class="row">
+          <div class="row recipe-card">
             <div class="col-md-4">
               <img
                 class="food-pic"
@@ -126,7 +126,7 @@
       <div class="row recipe-row">
         <div class="col-xl-6">
           <!-- Egg Salad Sandwich -->
-          <div class="row">
+          <div class="row recipe-card">
             <div class="col-md-4">
               <img
                 class="food-pic"
@@ -146,7 +146,7 @@
         </div>
         <div class="col-xl-6">
           <!-- Sun-dried Tomato Pesto Hummus -->
-          <div class="row">
+          <div class="row recipe-card">
             <div class="col-md-4">
               <img
                 class="food-pic"
@@ -174,7 +174,7 @@
       <div class="row recipe-row">
         <div class="col-xl-6">
           <!-- Roasted Aubergine & Chickpea Curry -->
-          <div class="row">
+          <div class="row recipe-card">
             <div class="col-md-4">
               <img
                 class="food-pic"
@@ -199,7 +199,7 @@
         </div>
         <div class="col-xl-6">
           <!-- Tso Tofu -->
-          <div class="row">
+          <div class="row recipe-card">
             <div class="col-md-4">
               <img
                 class="food-pic"
