--- a/challenge.html
+++ b/challenge.html
@@ -1,39 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <title>Challege | Lets Go Vegan</title>
-    <link
-      rel="shortcut icon"
-      type="image/png"
-      href="assets/images/favicon.png"
-    />
-  </head>
-  <body>
-    <!-- Header Section including logo and Navigation -->
-    <header class="container-fluid">
-      <nav class="navbar navbar-expand-sm navbar-light">
-        <a class="navbar-brand mr-auto" href="index.html"
-          ><img
+
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+		integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
+	<link rel="stylesheet" href="assets/css/style.css" />
+	<title>Challege | Lets Go Vegan</title>
+	<link rel="shortcut icon" type="image/png" href="assets/images/favicon.png" />
+</head>
+
+<body>
+	<!-- Header Section including logo and Navigation -->
+	<header class="container-fluid">
+		<nav class="navbar navbar-expand-sm navbar-light">
+			<a class="navbar-brand mr-auto" href="index.html"><img
             src="assets/images/vegan-logo.png"
             alt="vegan logo"
             height="75"
             width="75"
         /></a>
-        <button
+				<button
           class="navbar-toggler btn btn-secondary"
           type="button"
           data-toggle="collapse"
@@ -44,46 +34,43 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div
-          class="collapse navbar-collapse justify-content-end"
-          id="navbarToggler"
-        >
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="why-vegan.html">Why </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="food.html">Recipes </a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="challenge.html">Challenge </a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-      <div class="container-fluid">
-        <!--Only show on mobile-->
-        <div class="row">
-          <div class="col-12">
-            <a class="nav-head d-sm-none" href="whyvegan.html"
-              ><h1>Lets Go Vegan!</h1>
-            </a>
-          </div>
-        </div>
-      </div>
-    </header>
-    <!-- Main section - middle of page -->
-    <section class="container-fluid" id="frog-outer">
-      <div id="frog-pic">
-        <div class="row">
-          <div class="col-12 col-lg-6 ml-lg-auto">
-            <form class="signup-form">
-              <h2>Challenge Sign-Up</h2>
-              <!-- Label wrap for better spacing -->
-              <label for="fname">
+				<div class="collapse navbar-collapse justify-content-end" id="navbarToggler">
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a class="nav-link" href="index.html">Home </a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="why-vegan.html">Why </a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="food.html">Recipes </a>
+						</li>
+						<li class="nav-item active">
+							<a class="nav-link" href="challenge.html">Challenge </a>
+						</li>
+					</ul>
+				</div>
+		</nav>
+		<div class="container-fluid">
+			<!--Only show on mobile-->
+			<div class="row">
+				<div class="col-12">
+					<a class="nav-head d-sm-none" href="whyvegan.html">
+						<h1>Lets Go Vegan!</h1>
+					</a>
+				</div>
+			</div>
+		</div>
+	</header>
+	<!-- Main section - middle of page -->
+	<section class="container-fluid" id="frog-outer">
+		<div id="frog-pic">
+			<div class="row">
+				<div class="col-12 col-lg-6 ml-lg-auto">
+					<form class="signup-form">
+						<h2>Challenge Sign-Up</h2>
+						<!-- Label wrap for better spacing -->
+						<label for="fname">
                 <input
                   class="text-input"
                   id="fname"
@@ -93,8 +80,8 @@
                   required
                 />
               </label>
-              <br />
-              <label for="lname">
+						<br />
+						<label for="lname">
                 <input
                   class="text-input"
                   id="lname"
@@ -104,8 +91,8 @@
                   required
                 />
               </label>
-              <br />
-              <label for="email">
+						<br />
+						<label for="email">
                 <input
                   class="text-input"
                   id="email"
@@ -115,8 +102,8 @@
                   required
                 />
               </label>
-              <br />
-              <label for="cemail">
+						<br />
+						<label for="cemail">
                 <input
                   class="text-input"
                   id="cemail"
@@ -126,8 +113,8 @@
                   required
                 />
               </label>
-              <br />
-              <label class="comm-option" for="date"
+						<br />
+						<label class="comm-option" for="date"
                 >Challenge Start Date
                 <br />
                 <input
@@ -138,17 +125,10 @@
                   onfocus="(this.type='date')"
                   required
                 />
-                <!-- <input
-                  class="text-input support-option"
-                  id="date"
-                  type="date"
-                  name="start_date"
-                  required
-                /> -->
-              </label>
-              <br />
-              <!-- Drop Down Selection for form -->
-              <label class="comm-option" for="daily"
+                             </label>
+						<br />
+						<!-- Drop Down Selection for form -->
+						<label class="comm-option" for="daily"
                 >How Often Can we Contact You
                 <br />
 
@@ -162,61 +142,50 @@
                   <option value="none">No Support Required</option>
                 </select>
               </label>
-              <br />
-              <br />
-              <input class="join-button" type="submit" value="Lets Begin" />
+						<br />
+						<br />
+						<input class="join-button" type="submit" value="Lets Begin" />
             </form>
-          </div>
-        </div>
-      </div>
-    </section>
+				</div>
+			</div>
+		</div>
+	</section>
 
-    <!-- Footer Section -->
-    <footer class="container-fluid">
-      <div class="row footer-row">
-        <div
-          class="col-sm-1 col-md-6 d-none d-sm-block social-links d-md-flex justify-content-start"
-        >
-          <a href="challenge.html"
-            ><i class="fa fa-envelope-open-text" aria-hidden="true"></i>
-            <span class="sr-only">Challange</span></a
-          >
-        </div>
+	<!-- Footer Section -->
+	<footer class="container-fluid">
+		<div class="row footer-row">
+			<div class="col-sm-1 col-md-6 d-none d-sm-block social-links d-md-flex justify-content-start">
+				<a href="challenge.html"><i class="fa fa-envelope-open-text" aria-hidden="true"></i>
+					<span class="sr-only">Challange</span></a>
+			</div>
 
-        <div class="col-sm-3 col-md-6 d-md-flex justify-content-end">
-          <ul class="list-inline social-links">
-            <li class="list-inline-item">
-              <a
-                href="https://m.youtube.com/playlist?list=PL3D58119F10C2B9A2"
-                target="_blank"
-                ><i class="fa fa-youtube" aria-hidden="true"></i>
-                <span class="sr-only">YouTube</span></a
-              >
-            </li>
-            <li class="list-inline-item">
-              <a href="https://twitter.com/twitter" target="_blank"
-                ><i class="fa fa-twitter" aria-hidden="true"></i>
-                <span class="sr-only">Twitter</span></a
-              >
-            </li>
-            <li class="list-inline-item">
-              <a href="https://www.facebook.com/facebook" target="_blank"
-                ><i class="fa fa-facebook" aria-hidden="true"></i>
-                <span class="sr-only">Facebook</span></a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
-    </footer>
+			<div class="col-sm-3 col-md-6 d-md-flex justify-content-end">
+				<ul class="list-inline social-links">
+					<li class="list-inline-item">
+						<a href="https://m.youtube.com/playlist?list=PL3D58119F10C2B9A2"
+							target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i>
+							<span class="sr-only">YouTube</span></a>
+					</li>
+					<li class="list-inline-item">
+						<a href="https://twitter.com/twitter"
+							target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i>
+							<span class="sr-only">Twitter</span></a>
+					</li>
+					<li class="list-inline-item">
+						<a href="https://www.facebook.com/facebook"
+							target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i>
+							<span class="sr-only">Facebook</span></a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</footer>
 
-    <!-- Required for Bootstrap JS & keep all scripts together -->
-    <script
-      src="https://kit.fontawesome.com/15a3b949c3.js"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
-  </body>
+	<!-- Required for Bootstrap JS & keep all scripts together -->
+	<script src="https://kit.fontawesome.com/15a3b949c3.js" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+</body>
+
 </html>
