fix recipe wrong name and link to why-vegan being broken

--- a/challenge.html
+++ b/challenge.html
@@ -55,7 +55,7 @@
 			<!--Only show on mobile-->
 			<div class="row">
 				<div class="col-12">
-					<a class="nav-head d-sm-none" href="whyvegan.html">
+					<a class="nav-head d-sm-none" href="why-vegan.html">
 						<h1>Lets Go Vegan!</h1>
 					</a>
 				</div>
